доработал напоминание при сохранении